<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snehamishra.smartshopping.ShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_absoluteX="0dp"
        tools:layout_absoluteY="0dp">

        <TextView
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="back"
        android:text="@string/btn_back" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="41dp"
                android:layout_marginStart="41dp"
                android:text="@string/ar"
                android:textSize="20dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:backgroundTint="@color/colorTrendsButton"
                android:layout_gravity="top|end"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/lbl_AR"
                android:layout_toRightOf="@+id/lbl_AR"
                android:onClick="startUnity"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/trends_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="41dp"
                android:layout_marginRight="41dp"
                android:background="@color/colorTrendsBlue"
                android:textColor="@color/colorTextWhite"
                android:textStyle="bold"
                android:text="@string/view_trends" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp">

            <TextView
                android:id="@+id/lbl_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:text="@string/lbl_search"
                android:layout_marginStart="5sp" />

            <EditText
                android:id="@+id/txt_search"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_search"
                android:layout_marginLeft="5sp"
                android:ems="10"
                android:hint="@string/search_hint"
                android:inputType="textPersonName"
                android:layout_marginStart="5sp" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_search"
                android:layout_marginLeft="10sp"
                android:layout_toEndOf="@id/txt_search"
                android:layout_toRightOf="@id/txt_search"
                android:onClick="searchCall"
                android:text="@string/btn_search"
                android:textStyle="bold"
                android:textColor="@color/colorTextWhite"
                android:background="@color/colorAccent"
                android:layout_marginStart="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp">

            <TextView
                android:id="@+id/lbl_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/lbl_sort"
                android:layout_marginStart="10sp" />

            <Spinner
                android:id="@+id/spin_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_toEndOf="@id/lbl_sort"
                android:layout_toRightOf="@id/lbl_sort"
                android:layout_marginStart="5sp" />

            <Button
                android:id="@+id/btn_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_toEndOf="@id/spin_sort"
                android:layout_toRightOf="@id/spin_sort"
                android:onClick="sortCall"
                android:text="@string/btn_sort"
                android:textStyle="bold"
                android:textColor="@color/colorTextWhite"
                android:background="@color/colorAccent"
                android:layout_marginStart="10sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/lst_items"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:choiceMode="singleChoice"
            android:listSelector="@color/colorSelect" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
